--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Durgaprasadnaikkethavath.github.io/project_kdpnmart",
   "name": "project_kdpnmart",
   "private": true,
   "version": "0.0.0",
